# oc-msft

./: LICENCE  README.md  oc_msft.py  requirements.txt  setup.cfg
