[metadata]
author = Joachim Kuebart
author_email = joachim.kuebart@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: System :: Networking
description = Determine VPN connection parameters for Microsoft's SAML SSL
long_description = file: README.md
long_description_content_type = text/markdown
name = oc-msft
project_urls =
    Issue Tracker = https://gitlab.com/jkuebart/oc-msft/-/issues
url = https://gitlab.com/jkuebart/oc-msft.git
version = attr: oc_msft.__version__

[options]
install_requires = pyotp
py_modules = oc_msft
python_requires = >=3.6

[options.entry_points]
console_scripts = oc_msft = oc_msft:main
